# api_example

./: .gitignore  .pre-commit-config.yaml  Dockerfile  config.yaml.example  docker-compose.yml  pyproject.toml  tox.ini
src/app/: main.py  models.py
src/app/core/: config.py  database.py
src/app/domain/: enums.py  examples.py  filters.py
src/app/repositories/: base.py  example.py  first_external.py  second_external.py
src/app/resources/: example.py  example_resource.py
src/app/schemas/: base.py  example.py
src/app/services/: example.py  example_service.py
src/tests/: repositories.py
src/tests/examples/: test_create_example.py  test_get_examples.py
